# synergy-link

./: .eslintrc.js  App.tsx  CLOUD_TESTING_GUIDE.md  FINAL_TEST_REPORT.md  README.md  app.json  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle  google-services.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
backend/: .env  pyproject.toml
backend/app/: database.py  main.py  models.py
backend/backend/: pyproject.toml
frontend/: index.html  package.json
frontend/src/: App.tsx  AuthContext.tsx  LoginPage.tsx  MindMapView.tsx  RegisterPage.tsx  VisionMapCreator.tsx
functions/: package-lock.json  package.json  tsconfig.json
functions/lib/: index.js  index.js.map
functions/src/: index.ts
ios/: Podfile
ios/SynergyLink/: AppDelegate.swift  GoogleService-Info.plist  Info.plist  LaunchScreen.storyboard
ios/SynergyLink.xcodeproj/: project.pbxproj
ios/SynergyLink.xcodeproj/xcshareddata/xcschemes/: SynergyLink.xcscheme
src/components/: MatchModal.tsx  ProfileCard.tsx
src/navigation/: AppNavigator.tsx  TabNavigator.tsx
src/screens/: BusinessCardUploadScreen.tsx  ChatListScreen.tsx  ChatScreen.tsx  CommunityCreateScreen.tsx  CommunityDetailScreen.tsx  CommunityListScreen.tsx  DiscoverScreen.tsx  LoginScreen.tsx  PendingReviewScreen.tsx  ProfileCompleteScreen.tsx  ProfileEditScreen.tsx  SignUpScreen.tsx  WelcomeScreen.tsx  index.ts
src/services/: firebase.ts  types.ts
src/theme/: colors.ts  theme.ts
src/utils/: errorHandler.ts
(+2 files in other folders)
